--- a/creational/builder/README.adoc
+++ b/creational/builder/README.adoc
@@ -1,10 +1,10 @@
-# 建造者模式
+= 建造者模式
 
-### 定义
+== 定义
 
 指将一个复杂对象的构造与它的表示分离，使同样的构建过程可以创建不同的表示，这样的设计模式被称为建造者模式。它是将一个复杂的对象分解为多个简单的对象，然后一步一步构建而成。它将变与不变相分离，即产品的组成部分是不变的，但每一部分是可以灵活选择的。
 
-### 结构
+== 结构
 
 建造者（Builder）模式由产品、抽象建造者、具体建造者、指挥者等 4 个要素构成。
 
