--- a/behavioral/README.adoc
+++ b/behavioral/README.adoc
@@ -1,4 +1,4 @@
-# 行为型模式
+= 行为型模式
 
 行为型模式(Behavioral Pattern)是对不同对象之间划分责任和算法的抽象化。
 
@@ -11,7 +11,7 @@
 - 类行为模式：类的行为模式使用继承关系在吉各类之间分配行为，类行为模式主要通过多态等方式来分配父类与子类的职责。
 - 对象行为模式：对象的行为模式则使用对象的聚合关系来分配行为，对象行为模式主要通过对象关联等方式来分配两个或多个类的职责。 根据"合成复用原则"系统中要尽量使用关联关系来取代继承关系，因此大部分行为型设计模式都属于对象行为型设计模式。
 
-### 行为型模式分为以下几种
+== 行为型模式分为以下几种
 
 - [ ] 模板方法模式：定义一个操作中的算法骨架，将算法的一些步骤延迟到子类中，使得子类在可以不改变该算法结构的情况下重定义该算法的某些特定步骤。
 - [ ] 策略模式：定义了一系列算法，并将每个算法封装起来，使它们可以相互替换，且算法的改变不会影响使用算法的客户。
