--- a/behavioral/chain-of-responsibility/README.adoc
+++ b/behavioral/chain-of-responsibility/README.adoc
@@ -22,3 +22,8 @@
 . Struts2 的拦截器
 . Jsp Servlet 的 Filter
 
+== 责任链模式的结构
+
+抽象处理者(Handler)角色:: 定义一个处理请求的接口，包含抽象处理方法和一个后续连接
+具体处理者(Concrete Handler)角色:: 实现抽象处理者的处理方法，判断能否处理本次请求，如果可以处理请求则处理，否则将该请求转它的后继者
+客户类(Client)角色:: 创建处理链，并向链头的具体处理者对象提交请求，他不关心处理细节和请求的传递过程
