--- a/behavioral/README.adoc
+++ b/behavioral/README.adoc
@@ -13,10 +13,10 @@
 
 == 行为型模式分为以下几种
 
-- [x] 模板方法模式：定义一个操作中的算法骨架，将算法的一些步骤延迟到子类中，使得子类在可以不改变该算法结构的情况下重定义该算法的某些特定步骤。
-- [ ] 策略模式：定义了一系列算法，并将每个算法封装起来，使它们可以相互替换，且算法的改变不会影响使用算法的客户。
+- [ ] 模板方法模式：定义一个操作中的算法骨架，将算法的一些步骤延迟到子类中，使得子类在可以不改变该算法结构的情况下重定义该算法的某些特定步骤。
+- [x] 策略模式：定义了一系列算法，并将每个算法封装起来，使它们可以相互替换，且算法的改变不会影响使用算法的客户。
 - [ ] 命令模式：讲一个请求封装为一个对象，使发出请求的责任和执行请求的责任分开。
-- [ ] 职责链模式：把请求从链中的一个对象传到下一个对象，知道请求被响应为止。通过这种方式去除对象之间的耦合。
+- [x] 职责链模式：把请求从链中的一个对象传到下一个对象，知道请求被响应为止。通过这种方式去除对象之间的耦合。
 - [ ] 状态模式：允许一个对象在其内部状态发生变化时改变其行为能力。
 - [ ] 观察者模式：多个对象间存在一对多关系，当一个对象发生改变时，把这种改变通知给其他多个对象，从而影响其他对象的行为。
 - [x] 中介者模式：定义一个中介对象来简化原有对象之间的交互关系，降低系统中对象的耦合度，使原有对象之间不必相互了解。
