--- a/structural/README.adoc
+++ b/structural/README.adoc
@@ -9,7 +9,7 @@
 
 - [x] 代理模式：为某对象提供一种代理以控制对该对象的访问。即客户端通过代理间接地访问该对象，从而限制、增强或修改该对象的一些特性。
 - [ ] 适配器模式：将一个类的接口转换成客户希望的另外一个接口，使得原本由于接口不兼容而不能在一起工作的那些类能一起工作。
-- [ ] 桥接模式：将抽象与实现分离，使它们可以独立变化。它是用组合关系替换继承关系来实现的，从而降低了抽象和实现这两个可变维度的耦合度。
+- [x] 桥接模式：将抽象与实现分离，使它们可以独立变化。它是用组合关系替换继承关系来实现的，从而降低了抽象和实现这两个可变维度的耦合度。
 - [ ] 装饰模式：动态地给对象增加一些职责，既增加其额外的功能。
 - [x] 外观模式：为多个复杂的子系统提供一个一致的接口，使得这些子系统更加容易被访问。
 - [ ] 享元模式：运用共享技术来有效地支持大量细粒度对象的复用。
