--- a/behavioral/command/README.adoc
+++ b/behavioral/command/README.adoc
@@ -12,3 +12,16 @@
 
 举个栗子: 将军下令要(士兵)买几缸酒回来喝。将军就是调用者，而士兵是被调用者，买酒就是命令
 
+== 总结
+
+=== 使用场景
+. GUI 中每一个按钮都是一条命令
+. 模拟 CMD
+
+=== 优缺点
+优点::
+. 降低系统耦合度
+. 容易扩展
+缺点::
+. 使用命令模式可能会导致系统有过多的具体命令类
+
