--- a/behavioral/README.adoc
+++ b/behavioral/README.adoc
@@ -13,7 +13,7 @@
 
 == 行为型模式分为以下几种
 
-- [ ] 模板方法模式：定义一个操作中的算法骨架，将算法的一些步骤延迟到子类中，使得子类在可以不改变该算法结构的情况下重定义该算法的某些特定步骤。
+- [x] 模板方法模式：定义一个操作中的算法骨架，将算法的一些步骤延迟到子类中，使得子类在可以不改变该算法结构的情况下重定义该算法的某些特定步骤。
 - [x] 策略模式：定义了一系列算法，并将每个算法封装起来，使它们可以相互替换，且算法的改变不会影响使用算法的客户。
 - [x] 命令模式：讲一个请求封装为一个对象，使发出请求的责任和执行请求的责任分开。
 - [x] 职责链模式：把请求从链中的一个对象传到下一个对象，知道请求被响应为止。通过这种方式去除对象之间的耦合。
